--- a/app/views/births/multipleBirths/child2Details/01-child2-name-date.html
+++ b/app/views/births/multipleBirths/child2Details/01-child2-name-date.html
@@ -171,7 +171,7 @@ href: "javascript:window.history.back()"
           <div class="govuk-radios">
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="sex-1" name="sex" type="radio" value="Female" {{
-                checked("sex", "Female" ) }}>
+                checked("sex", "Female" ) }} {% if not data.sex %}checked="checked" {% endif %}>
               <label class="govuk-label govuk-radios__label" for="sex-1">Female</label>
             </div>
             <div class="govuk-radios__item">
