--- a/app/views/births/multipleBirths/child2Details/02-child2-place-of-birth.html
+++ b/app/views/births/multipleBirths/child2Details/02-child2-place-of-birth.html
@@ -35,21 +35,21 @@ href: "javascript:window.history.back()"
           <div class="govuk-radios" data-module="govuk-radios">
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" value="england"
-                {% if data['child2-whereDoYouLive']=='england' %}checked{% endif %}>
+              checked>
               <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
                 Communal establishment
               </label>
             </div>
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio"
-                value="scotland" {% if data['child2-whereDoYouLive']=='scotland' %}checked{% endif %}>
+                value="scotland">
               <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
                 Home
               </label>
             </div>
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="whereDoYouLive-3" name="whereDoYouLive" type="radio" value="wales"
-                {% if data['child2-whereDoYouLive']=='wales' %}checked{% endif %}>
+        >
               <label class="govuk-label govuk-radios__label" for="whereDoYouLive-3">
                 In transit
               </label>
@@ -145,9 +145,6 @@ href: "javascript:window.history.back()"
         </p>
         <br>
       </fieldset>
-
-
-
       {{ govukButton({
       text: "Save and return"
       }) }}
