--- a/app/views/births/multipleBirths/childsDetails/02-place-of-birth.html
+++ b/app/views/births/multipleBirths/childsDetails/02-place-of-birth.html
@@ -108,7 +108,7 @@ href: "javascript:window.history.back()"
               Building name
             </label>
             <input class="govuk-input govuk-!-width-two-thirds" id="fathers-address-town" name="fathersAddressTown"
-              type="text" autocomplete="address-level2" value="{{ data.fathersAddressTown or '' }}">
+              type="text" autocomplete="address-level2" value="{{ data.fathersAddressTown or 'Princess Anne hospital' }}">
           </div>
           <div class="govuk-form-group">
             <label class="govuk-label" for="fathers-address-county">
