--- a/app/views/births/multipleBirths/parentsDetails/fathers-details.html
+++ b/app/views/births/multipleBirths/parentsDetails/fathers-details.html
@@ -158,7 +158,7 @@ href: "javascript:window.history.back()"
             <fieldset class="govuk-fieldset" id="address-fields" style="display: none;">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                 <h3 class="govuk-fieldset__heading">
-                  Address when the child was born
+                  Address
                 </h3>
               </legend>
               <div class="govuk-form-group">
