--- a/app/views/births/multipleBirths/child2Details/01-child2-name-date.html
+++ b/app/views/births/multipleBirths/child2Details/01-child2-name-date.html
@@ -155,7 +155,7 @@ href: "javascript:window.history.back()"
             <div class="govuk-date-input__item">
               <div class="govuk-form-group">
                 <label class="govuk-label govuk-date-input__label" for="dob-period">am / pm</label>
-                <select class="govuk-select" id="dob-period" name="dob-period">
+                <select class="govuk-select time-select" id="dob-period" name="dob-period">
                   <option value="AM">pm</option>
                   <option value="PM">am</option>
                 </select>
@@ -188,8 +188,6 @@ href: "javascript:window.history.back()"
         </fieldset>
       </div>
 
-
-
       <div class="govuk-button-group">
         {{ govukButton({
         text: "Save and return"
@@ -197,7 +195,6 @@ href: "javascript:window.history.back()"
       </div>
 
     </form>
-
   </div>
 </div>
 
