--- a/app/views/births/multipleBirths/childsDetails/02-place-of-birth.html
+++ b/app/views/births/multipleBirths/childsDetails/02-place-of-birth.html
@@ -93,71 +93,71 @@ href: "javascript:window.history.back()"
             <label class="govuk-label" for="fathers-address-line-1">
               Flat number or name
             </label>
-            <input class="govuk-input govuk-!-width-two-thirds" id="fathers-address-line-1" name="fathersAddressLine1"
-              type="text" autocomplete="address-line1" value="{{ data.fathersAddressLine1 or '' }}">
+            <input class="govuk-input govuk-!-width-two-thirds" id="childs-address-line-1" name="childsAddressLine1"
+              type="text" autocomplete="address-line1" value="{{ data.childsAddressLine1 or '' }}">
           </div>
           <div class="govuk-form-group">
-            <label class="govuk-label" for="fathers-address-line-2">
+            <label class="govuk-label" for="childs-address-line-2">
               Building number
             </label>
-            <input class="govuk-input govuk-!-width-two-thirds" id="fathers-address-line-2" name="fathersAddressLine2"
-              type="text" autocomplete="address-line2" value="{{ data.fathersAddressLine2 or '' }}">
+            <input class="govuk-input govuk-!-width-two-thirds" id="childs-address-line-2" name="childsAddressLine2"
+              type="text" autocomplete="address-line2" value="{{ data.childsAddressLine2 or '' }}">
           </div>
           <div class="govuk-form-group">
-            <label class="govuk-label" for="fathers-address-town">
+            <label class="govuk-label" for="childs-address-building-name">
               Building name
             </label>
-            <input class="govuk-input govuk-!-width-two-thirds" id="fathers-address-town" name="fathersAddressTown"
-              type="text" autocomplete="address-level2" value="{{ data.fathersAddressTown or 'Princess Anne hospital' }}">
+            <input class="govuk-input govuk-!-width-two-thirds" id="childs-address-building-name" name="childsAddressBuildingName"
+              type="text" autocomplete="address-level2" value="{{ data.childsAddressBuildingName or 'Princess Anne hospital' }}">
           </div>
           <div class="govuk-form-group">
-            <label class="govuk-label" for="fathers-address-county">
+            <label class="govuk-label" for="childs-address-county">
               Street address line 1
             </label>
-            <input class="govuk-input govuk-!-width-two-thirds" id="fathers-address-county" name="fathersAddressCounty"
-              type="text" value="{{ data.fathersAddressCounty or '23 West Drive' }}">
+            <input class="govuk-input govuk-!-width-two-thirds" id="childs-address-county" name="childsAddressCounty"
+              type="text" value="{{ data.childsAddressCounty or '23 West Drive' }}">
           </div>
           <div class="govuk-form-group">
             <label class="govuk-label" for="fathers-address-line-3">
               Street address line 2
             </label>
-            <input class="govuk-input govuk-!-width-two-thirds" id="fathers-address-line-3" name="fathersAddressLine3"
-              type="text" autocomplete="address-line1" value="{{ data.fathersAddressLine3 or '' }}">
+            <input class="govuk-input govuk-!-width-two-thirds" id="childs-address-line-3" name="childsAddressLine3"
+              type="text" autocomplete="address-line1" value="{{ data.childsAddressLine3 or '' }}">
           </div>
           <div class="govuk-form-group">
             <label class="govuk-label" for="fathers-address-line-4">
               Street address line 3
             </label>
-            <input class="govuk-input govuk-!-width-two-thirds" id="fathers-address-line-4" name="fathersAddressLine4"
-              type="text" autocomplete="address-line2" value="{{ data.fathersAddressLine4 or '' }}">
+            <input class="govuk-input govuk-!-width-two-thirds" id="childs-address-line-4" name="childsAddressLine4"
+              type="text" autocomplete="address-line2" value="{{ data.childsAddressLine4 or '' }}">
           </div>
           <div class="govuk-form-group">
-            <label class="govuk-label" for="fathers-address-line-5">
+            <label class="govuk-label" for="childs-address-line-5">
               Street address line 4
             </label>
-            <input class="govuk-input govuk-!-width-two-thirds" id="fathers-address-line-5" name="fathersAddressLine5"
-              type="text" autocomplete="address-level2" value="{{ data.fathersAddressLine5 or '' }}">
+            <input class="govuk-input govuk-!-width-two-thirds" id="childs-address-line-5" name="childsAddressLine5"
+              type="text" autocomplete="address-level2" value="{{ data.childsAddressLine5 or '' }}">
           </div>
           <div class="govuk-form-group">
-            <label class="govuk-label" for="fathers-address-city">
+            <label class="govuk-label" for="childs-address-city">
               Town or city
             </label>
-            <input class="govuk-input govuk-!-width-two-thirds" id="fathers-address-city" name="fathersAddressCity"
-              type="text" value="{{ data.fathersAddressCity or 'Eastleigh' }}">
+            <input class="govuk-input govuk-!-width-two-thirds" id="childs-address-city" name="childsAddressCity"
+              type="text" value="{{ data.childsAddressCity or 'Eastleigh' }}">
           </div>
           <div class="govuk-form-group">
-            <label class="govuk-label" for="fathers-address-county-2">
+            <label class="govuk-label" for="childs-address-county-2">
               County
             </label>
-            <input class="govuk-input govuk-!-width-two-thirds" id="fathers-address-county-2"
-              name="fathersAddressCounty2" type="text" value="{{ data.fathersAddressCounty2 or '' }}">
+            <input class="govuk-input govuk-!-width-two-thirds" id="childs-address-county-2"
+              name="childsAddressCounty2" type="text" value="{{ data.childsAddressCounty2 or '' }}">
           </div>
           <div class="govuk-form-group">
-            <label class="govuk-label" for="fathers-address-postcode">
+            <label class="govuk-label" for="childs-address-postcode">
               Postcode
             </label>
-            <input class="govuk-input govuk-input--width-10" id="fathers-address-postcode" name="fathersAddressPostcode"
-              type="text" autocomplete="postal-code" value="{{ data.fathersAddressPostcode or 'SO50 6FN' }}">
+            <input class="govuk-input govuk-input--width-10" id="childs-address-postcode" name="childsAddressPostcode"
+              type="text" autocomplete="postal-code" value="{{ data.childsAddressPostcode or 'SO50 6FN' }}">
           </div>
         </fieldset>
         {{ govukButton({
