--- a/app/views/births/multipleBirths/parentsDetailsChild2/fathers-name-child2.html
+++ b/app/views/births/multipleBirths/parentsDetailsChild2/fathers-name-child2.html
@@ -125,26 +125,26 @@ href: "javascript:window.history.back()"
           </legend>
           <div class="govuk-radios" data-module="govuk-radios">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" value="england">
-              <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
+              <input class="govuk-radios__input" id="otherNames" name="otherNames" type="radio" value="Otherwise" checked>
+              <label class="govuk-label govuk-radios__label" for="otherNames" >
                 Otherwise
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio"
-                value="scotland" checked>
+              <input class="govuk-radios__input" id="otherNames-2" name="otherNames" type="radio"
+                value="scotland" >
               <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
                 Formerly known as
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="whereDoYouLive-3" name="whereDoYouLive" type="radio" value="wales">
+              <input class="govuk-radios__input" id="otherNames-3" name="otherNames" type="radio" value="wales">
               <label class="govuk-label govuk-radios__label" for="whereDoYouLive-3">
                 Now
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="whereDoYouLive-4" name="whereDoYouLive" type="radio"
+              <input class="govuk-radios__input" id="otherNames-4" name="otherNames" type="radio"
                 value="northern-ireland">
               <label class="govuk-label govuk-radios__label" for="whereDoYouLive-4">
                 Afterwards
@@ -164,9 +164,6 @@ href: "javascript:window.history.back()"
           <label class="govuk-label govuk-label--s" for="deceased-middle-name">Middle names</label>
           <input class="govuk-input govuk-!-width-one-half" id="deceased-middle-name" name="fathersMiddleName"
             type="text" value="{{data['fathersMiddleName']}}">
-          <!-- <p class="govuk-body">
-    <a href="#" class="govuk-link">Add more middle names</a>
-  </p> -->
         </div>
 
         <div class="govuk-form-group">
