--- a/app/views/births/multipleBirths/submit/check-answers-page.html
+++ b/app/views/births/multipleBirths/submit/check-answers-page.html
@@ -258,6 +258,7 @@ href: "javascript:window.history.back()"
           Interim deputy registrar
           {% else %}
           Registrar
+          {% endif %}
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="/births/multipleBirths/childsDetails/01-name-date.html">Change<span
