fixed child 2 check answers routing

--- a/app/views/births/multipleBirths/submitChild2/check-answers-page-child2.html
+++ b/app/views/births/multipleBirths/submitChild2/check-answers-page-child2.html
@@ -293,7 +293,7 @@ href: "javascript:window.history.back()"
 
 
 
-    <form action="check-answers-complete" method="post" novalidate>
+    <form action="sign-page-child2" method="post" novalidate>
 
       {{ govukButton({
       text: "Continue"
