--- a/app/views/births/multipleBirths/child2Details/01-child2-name-date.html
+++ b/app/views/births/multipleBirths/child2Details/01-child2-name-date.html
@@ -15,6 +15,15 @@ href: "javascript:window.history.back()"
 
 {% block content %}
 
+<style>
+  .govuk-form-group .govuk-select.time-select {
+    width: 65px;
+    max-width: 65px;
+    min-width: 65px;
+  }
+</style>
+
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <span class="govuk-caption-l">Child 2 details</span>
