--- a/app/views/births/multipleBirths/submitChild2/check-answers-page-child2.html
+++ b/app/views/births/multipleBirths/submitChild2/check-answers-page-child2.html
@@ -165,7 +165,7 @@ href: "javascript:window.history.back()"
           Name
         </dt>
         <dd class="govuk-summary-list__value">
-          Pedro MORA formerly known as Pedro MORA SANCHEZ
+          Pedro MORA otherwise Pedro MORA SANCHEZ
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="/births/multipleBirths/childsDetails/01-name-date.html">Change<span
