--- a/app/views/index.html
+++ b/app/views/index.html
@@ -22,6 +22,10 @@
      <p class="govuk-body">
       <a href="/births/multipleBirths/00-sign-in.html">Task 1</a> – Registering twins with same informant
     </p>
+    
+    <p class="govuk-body">
+      <a href="/births/multipleBirths2/00-sign-in.html">Task 2</a> – Testing content here - Niamh fix
+    </p>
 
      <p class="govuk-body-s govuk-!-margin-top-6">Got a question? Team 4: Niamh, Kaisa or Helen</p>
    </div>
