--- a/app/views/births/multipleBirths2/submitChild2/check-answers-page-child2.html
+++ b/app/views/births/multipleBirths2/submitChild2/check-answers-page-child2.html
@@ -31,7 +31,7 @@ href: "javascript:window.history.back()"
           First October 2025, 12:00pm
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="/births/multipleBirths/child2Details/01-child2-name-date.html">Change<span
+          <a class="govuk-link" href="/births/multipleBirths2/child2Details/01-child2-name-date.html">Change<span
               class="govuk-visually-hidden"> name</span></a>
         </dd>
       </div>
@@ -83,7 +83,7 @@ href: "javascript:window.history.back()"
           Haley Jennifer MORA
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="/births/multipleBirths/childsDetails/01-name-date.html">Change<span
+          <a class="govuk-link" href="/births/multipleBirths2/childsDetails/01-name-date.html">Change<span
               class="govuk-visually-hidden"> name</span></a>
         </dd>
       </div>
@@ -168,7 +168,7 @@ href: "javascript:window.history.back()"
           Pedro MORA otherwise Pedro MORA SANCHEZ
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="/births/multipleBirths/childsDetails/01-name-date.html">Change<span
+          <a class="govuk-link" href="/births/multipleBirths2/childsDetails/01-name-date.html">Change<span
               class="govuk-visually-hidden"> name</span></a>
         </dd>
       </div>
@@ -220,7 +220,7 @@ href: "javascript:window.history.back()"
           Father
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="/births/multipleBirths/childsDetails/01-name-date.html">Change<span
+          <a class="govuk-link" href="/births/multipleBirths2/childsDetails/01-name-date.html">Change<span
               class="govuk-visually-hidden"> name</span></a>
         </dd>
       </div>
@@ -251,23 +251,25 @@ href: "javascript:window.history.back()"
           {% if data.designationSelector == 'REGISTRAR' %}
           Registrar
           {% elif data.designationSelector == 'DEPUTY_REGISTRAR' %}
-          Deputy registrar
+          Deputy Registrar
           {% elif data.designationSelector == 'INTERIM_REGISTRAR' %}
-          Interim registrar
+          Interim Registrar
           {% elif data.designationSelector == 'INTERIM_DEPUTY_REGISTRAR' %}
-          Interim deputy registrar
+          Interim Deputy Registrar
           {% else %}
           Registrar
           {% endif %}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="/births/multipleBirths/childsDetails/01-name-date.html">Change<span
+          <a class="govuk-link" href="/births/multipleBirths2/childsDetails/01-name-date.html">Change<span
               class="govuk-visually-hidden"> name</span></a>
         </dd>
       </div>
     </dl>
-    <p class="govuk-body">
-      <button type="button" class="print-button-link" onclick="window.print()">Print</button>
+       <p class="govuk-body">
+      <a href="/public/documents/320936a3-e187-43d1-8d27-585355f70545.pdf" target="_blank" class="govuk-link">
+        Open PDF
+      </a>
     </p>
     <div class="govuk-grid-row govuk-grid-column-full">
       {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
