--- a/app/views/births/multipleBirths2/task-list.html
+++ b/app/views/births/multipleBirths2/task-list.html
@@ -11,22 +11,12 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
 <div class="govuk-grid-row govuk-!-margin-bottom-6">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">Birth registration</h1>
-
-
-
-
-   
-   
-
-
-  
-
     <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Child's details</h2>
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="child-details/name-date">
-            Name, sex and date of birth
+          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths2/childsDetails/01-name-date.htm">
+            Name, sex and date of births
           </a>
         </div>
         <div class="govuk-task-list__status">
@@ -73,7 +63,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/parentsDetails/mothers-details">
+          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths2/parentsDetails/mothers-details">
             Mother's details
           </a>
         </div>
