--- a/app/views/index.html
+++ b/app/views/index.html
@@ -30,6 +30,13 @@
      <p class="govuk-body-s govuk-!-margin-top-6">Got a question? Team 4: Niamh, Kaisa or Helen</p>
    </div>
      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+       <div class="govuk-!-margin-top-6 govuk-!-margin-bottom-6">
+       <form action="/clear-session" method="get">
+         <button type="submit" class="govuk-button govuk-button--warning" data-module="govuk-button">
+           Clear data
+         </button>
+       </form>
+     </div>
 </div>
 
 {% endblock %}
