--- a/app/views/births/multipleBirths2/submitChild2/check-answers-page-child2.html
+++ b/app/views/births/multipleBirths2/submitChild2/check-answers-page-child2.html
@@ -266,11 +266,12 @@ href: "javascript:window.history.back()"
         </dd>
       </div>
     </dl>
-       <p class="govuk-body">
-      <a href="/public/documents/320936a3-e187-43d1-8d27-585355f70545.pdf" target="_blank" class="govuk-link">
-        Open PDF
+    <p class="govuk-body">
+      <a href="/public/documents/d476d40d-dea3-48d6-8e8f-e985a53564c1.pdf" target="_blank" class="govuk-link">
+        Print
       </a>
     </p>
+    
     <div class="govuk-grid-row govuk-grid-column-full">
       {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 
